cs352/proj3/tests/syntax/invalid/2.js
<script type="text/JavaScript">
if(1){
	var x = 2;

</script>
